Green div - Left align fix

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ div {
 
 #green {
     background-color: #008000;
-    text-align: right;
+    text-align: left;
 }
 
 footer > p {
